<resources>
    <string name="app_name">Trello Android Widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="start_auth">Get Trello Key</string>
    <string name="user_token_hint">Paste token here</string>
    <string name="save_button">Save</string>
    <string name="authorize">Authorize</string>
    <string name="log_out">Log Out</string>
    <string name="render_due_dates">Show Due Dates</string>
    <string name="render_list_names">Show List Names</string>
</resources>