<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/auth_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/user_token_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user_token_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/start_auth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_auth" />

        <Button
            android:id="@+id/save_token_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/member_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/member_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <Button
            android:id="@+id/log_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>